// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightBanner left orient renders correctly 1`] = `
<DocumentFragment>
  .c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 60em;
  padding: 2rem;
  width: 50%;
  z-index: 1;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 50%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 .gatsby-image-wrapper {
  height: 100%;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: hidden;
  text-align: left;
}

.c0 .c4 img {
  object-position: right !important;
}

.c1 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 .c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0 auto;
}

@media screen and (min-width:30em) {
  .c3 {
    padding: 2rem;
  }
}

@media screen and (min-width:46em) {
  .c3 {
    padding: 3rem;
  }
}

@media screen and (min-width:61.25em) {
  .c3 {
    padding: 4rem;
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:80em) {
  .c3 {
    padding: 5rem;
  }
}

@media screen and (min-width:105em) {
  .c3 {
    padding: 7rem;
  }
}

@media screen and (min-width:61.25em) {
  .c5 {
    width: 33.33333333333333%;
  }
}

@media (max-width:46em) {

}

<section
    class="sc-AxjAm c0 c1"
    orient="left"
  >
    <div
      class="sc-AxjAm c2 c3"
      width="[object Object]"
    >
      <h2>
        Title
      </h2>
      <p>
        Description
      </p>
    </div>
    <div
      class="sc-AxjAm c4 c5"
      width="[object Object]"
    >
      <div
        class=" gatsby-image-wrapper"
        style="position: relative; overflow: hidden;"
      >
        <div
          aria-hidden="true"
          style="width: 100%; padding-bottom: 66.66666666666667%;"
        />
        <picture>
          <source
            sizes="(max-width: 600px) 100vw, 600px"
            srcset="some srcSet"
          />
          <img
            alt="banner"
            loading="lazy"
            sizes="(max-width: 600px) 100vw, 600px"
            src="test-file-stub"
            srcset="some srcSet"
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 500ms;"
          />
        </picture>
        <noscript>
          &lt;picture&gt;&lt;source srcset="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img loading="lazy" sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test-file-stub" alt="banner" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
        </noscript>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SpotlightBanner right orient renders correctly 1`] = `
<DocumentFragment>
  .c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 60em;
  padding: 2rem;
  width: 50%;
  z-index: 1;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 50%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 .gatsby-image-wrapper {
  height: 100%;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: hidden;
  text-align: left;
}

.c0 .c4 img {
  object-position: left !important;
}

.c1 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1 .c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0 auto;
}

@media screen and (min-width:30em) {
  .c3 {
    padding: 2rem;
  }
}

@media screen and (min-width:46em) {
  .c3 {
    padding: 3rem;
  }
}

@media screen and (min-width:61.25em) {
  .c3 {
    padding: 4rem;
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:80em) {
  .c3 {
    padding: 5rem;
  }
}

@media screen and (min-width:105em) {
  .c3 {
    padding: 7rem;
  }
}

@media screen and (min-width:61.25em) {
  .c5 {
    width: 33.33333333333333%;
  }
}

@media (max-width:46em) {

}

<section
    class="sc-AxjAm c0 c1"
    orient="right"
  >
    <div
      class="sc-AxjAm c2 c3"
      width="[object Object]"
    >
      <h2>
        Title
      </h2>
      <p>
        Description
      </p>
    </div>
    <div
      class="sc-AxjAm c4 c5"
      width="[object Object]"
    >
      <div
        class=" gatsby-image-wrapper"
        style="position: relative; overflow: hidden;"
      >
        <div
          aria-hidden="true"
          style="width: 100%; padding-bottom: 66.66666666666667%;"
        />
        <picture>
          <source
            sizes="(max-width: 600px) 100vw, 600px"
            srcset="some srcSet"
          />
          <img
            alt="banner"
            loading="lazy"
            sizes="(max-width: 600px) 100vw, 600px"
            src="test-file-stub"
            srcset="some srcSet"
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 500ms;"
          />
        </picture>
        <noscript>
          &lt;picture&gt;&lt;source srcset="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img loading="lazy" sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test-file-stub" alt="banner" style="position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
        </noscript>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
